--- a/style.css
+++ b/style.css
@@ -1,21 +1,75 @@
 @import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap");
 
+*, ::before, ::after{
+  font-family: "League Spartan", sans-serif;
+  font-weight: 700;
+  transition: background-color 0.3s;
+}
+
 :root {
     --theme-1: hsl(6, 63%, 50%);
-    --theme-2: hsl(25, 98%, 40%);
-    --theme-3: hsl(176, 100%, 44%);
+
+    --main-bg: hsl(222, 26%, 31%);
+    --toggle-bg: hsl(223, 31%, 20%);
+    --screen-bg: hsl(224, 36%, 15%);
+    --key-bg: hsl(30, 25%, 89%);
+    --shadow-bg: hsl(28, 16%, 65%);
+
+    --del-bg: hsl(225, 21%, 49%);
+    --del-shadow-bg: hsl(221, 14%, 31%);
+
+    --equal-bg: hsl(6, 63%, 50%);
+    --equal-shadow-bg: hsl(6, 70%, 34%);
+
+    --head-text: white;
+
     --toggle-size: 25px;
   }
 
-*, ::before, ::after{
-    font-family: "League Spartan", sans-serif;
-    font-weight: 700;
+.theme-2{
+  --main-bg: hsl(0, 0%, 90%);
+  --toggle-bg: hsl(0, 5%, 81%);
+  --screen-bg: hsl(0, 0%, 93%);
+
+  --key-bg: hsl(45, 7%, 89%);
+  --shadow-bg: hsl(35, 11%, 61%);
+
+  --del-bg: hsl(185, 42%, 37%);
+  --del-shadow-bg: hsl(185, 58%, 25%);
+
+  --equal-bg: hsl(25, 98%, 40%);
+  --equal-shadow-bg: hsl(25, 99%, 27%);
+
+  --head-text: hsl(60, 10%, 19%);
+
+  --toggle-size: 25px;
 }
+
+.theme-3{
+  --main-bg: hsl(268, 75%, 9%);
+  --toggle-bg: hsl(268, 71%, 12%);
+  --screen-bg:  hsl(268, 71%, 12%);
+
+  --key-bg: hsl(281, 89%, 26%);
+  --shadow-bg: hsl(285, 91%, 52%);
+
+  --del-bg: hsl(268, 47%, 21%);
+  --del-shadow-bg: hsl(185, 58%, 25%);
+
+  --equal-bg: hsl(176, 100%, 44%);
+  --equal-shadow-bg: hsl(25, 99%, 27%);
+
+  --head-text: hsl(52, 100%, 62%);
+  --button-text: hsl(52, 100%, 62%);
+
+  --toggle-size: 25px;
+}
+
 body {
     font-family: "League Spartan", sans-serif;
     font-weight: 700;
     font-style: normal;
-    background-color: hsl(222, 26%, 31%);
+    background-color: var(--main-bg);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -26,7 +80,7 @@ body {
 }
 header {
     display: flex;
-    color: white;
+    color: var(--head-text);
     justify-content: space-between;
     align-items: center;
     height: 40px;
@@ -37,8 +91,9 @@ header > h1{
 }
 header > p{
     text-transform: uppercase;
-    display: inline-flex;
-    /* margin-left: 8rem; */
+    flex: 1;
+    text-align: right;
+    margin-right: 1.5rem;
 }
 .theme-box{
     display: flex;
@@ -62,14 +117,14 @@ header > p{
 .input-box{
     max-width: 100%;
     height: 100px;
-    background-color: hsl(224, 36%, 15%);
+    background-color: var(--screen-bg);
     border-radius: 12px;
     display: flex;
     justify-content: flex-end;
     padding: 0px 15px;
 }
 .input-box > h1{
-    color: white;
+    color: var(--head-text);
     font-size: 3rem;
 }
 
@@ -79,42 +134,44 @@ header > p{
     gap: 16px;
     max-width: 100%;
     margin-top: 15px;
-    padding: 12px;
-    background-color: hsl(224, 36%, 15%);
+    padding: 15px;
+    background-color: var(--toggle-bg);
     border-radius: 12px;
 }
 
 /* .button-box > button{ */
 button{
-    font-size: 32px;
+    /* font-size: 32px; */
+    font-size: 2.1rem;
     font-weight: 700;
-    border-radius: 12px;
+    border-radius: 4px;
+    width: 100%;
     /* aspect-ratio: 16 / 9; */
     height: 60px;
     padding: 7px 0;
-    border-width: 0 0 4px;
-    background-color: hsl(30, 25%, 89%);
-    border-color: hsl(28, 16%, 65%);
-    color: hsl(221, 14%, 31%);
+    border-width: 0 0 3px;
+    background-color: var(--key-bg);
+    border-color: var(--shadow-bg);
+    
+    color: var(--button-text);
     cursor: pointer;
-    transition: 0.3s;
+    /* transition: 0.3s; */
 }
 button:hover{
     background-color: white;
 }
 .del, .reset {
-    background-color: hsl(225, 21%, 49%);
-    border-color: hsl(223, 41%, 32%);
+    background-color: var(--del-bg);
+    border-color: var(--del-shadow-bg);
     color: white;
 }
 .del:hover, .reset:hover{
     background-color: #B0C4DE;
-
 }
 .equal{
-    background-color: var(--theme-1);
+    background-color: var(--equal-bg);
     color: white;
-    border-color: hsl(6, 70%, 34%);
+    border-color: var(--equal-shadow-bg);
 }
 .equal:hover{
     background-color: #FA8072;
@@ -140,11 +197,8 @@ button:hover{
 
 .switch {
     position: relative;
-    /* toggle size + 10 */
     height: calc(var(--toggle-size) + 10px);
-    /* toggle size * 3 + 10 */
     width: calc(var(--toggle-size)*3 + 10px);
-    /* margin: 20px auto; */
     background: #D7D7D7;
     border-radius: var(--toggle-size);
     transition: all 0.3s;
@@ -170,32 +224,26 @@ button:hover{
   .switch-input {
     display: none;
   }
-  
-  .switch-input:checked + .switch-label {
-    /* color: #FFF; */
-    transition: 0.15s ease-out;
-    transition-property: color, text-shadow;
-  }
 
 
   .switch-input:checked + .switch-label-y ~ .switch-selector {
     transform: translateX(0%);
-    background-color: var(--theme-1);
+    background-color: hsl(6, 63%, 50%);
   }
   .switch-input:checked + .switch-label-i ~ .switch-selector {
     transform: translateX(100%);
-    background-color: var(--theme-2);
+    background-color: hsl(25, 98%, 40%);
   }
   .switch-input:checked + .switch-label-n ~ .switch-selector {
     transform: translateX(200%);
-    background-color: var(--theme-3);
+    background-color: hsl(176, 100%, 44%);
   }
 
 
 
 
   .switch:has(> .switch-input:checked + .switch-label-y ){
-    background-color: hsl(224, 36%, 15%);
+    background-color: var(--toggle-bg);
   }
   .switch:has(> .switch-input:checked + .switch-label-i ){
     background-color: hsl(0, 5%, 81%);
